added social links

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
   <br>
 
     <div class="social-links">
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn Profile" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/anniehswong" target="_blank" aria-label="LinkedIn Profile" title="LinkedIn">
              <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
         </a>
 
-        <a href="https://github.com/yourprofile" target="_blank" aria-label="Github Profile" title="Github">
+        <a href="https://github.com/anniehswong" target="_blank" aria-label="Github Profile" title="Github">
             <i class="fa-brands fa-github" aria-hidden="true"></i>
         </a>
 
-        <a href="mailto:your.email@example.com" target="_blank" aria-label="Email" title="Email">
+        <a href="mailto:annie.hs.wong@gmail.com" target="_blank" aria-label="Email" title="Email">
             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
         </a>
     </div>
