Made an update to test AWS CodePipeline

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
 
   <br>
+  <p>Making an update to test AWS CodePipeline.</p>
 
     <div class="social-links">
         <a href="https://www.linkedin.com/in/anniehswong" target="_blank" aria-label="LinkedIn Profile" title="LinkedIn">
