change footer text and minor styling updates

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <span class="auto-type"></span>
     </div>
 
-  <br>
-  <p>Making an update to test AWS CodePipeline.</p>
+    <br>
 
     <div class="social-links">
         <a href="https://www.linkedin.com/in/anniehswong" target="_blank" aria-label="LinkedIn Profile" title="LinkedIn">
@@ -42,7 +41,7 @@
 </div>
 
     <footer>
-        This website was built using AWS services: Route 53, S3, AWS Certificate Manager, and CloudFront.
+        <p>This website was built using AWS services: Route 53 for the custom domain, S3 for file storage, ACM for SSL certificate creation, CloudFront for secure content delivery, and CodePipeline for Continuous Deployment from GitHub to S3.</p>
     </footer>
 
 </body>
